SourceMetaData/src/objects/Ticket__c.object
<CustomObject>
    <description>An object that is used to store individual tickets linked to a goal (case).</description>
    <fields>
        <fullName>CCCOTH_Contact_Centre_Action__c</fullName>
        <description>The action that the contact center performed</description>
        <inlineHelpText>The action that the contact center performed</inlineHelpText>
        <label>Contact Centre Action</label>
        <picklist>
            <picklistValues>
                <fullName>Provide Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule A Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send A Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Take Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Payment/ Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Action_Required__c</fullName>
        <description>What is the required Action on this ticket?</description>
        <inlineHelpText>What is the required Action on this ticket?</inlineHelpText>
        <label>Action Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMP_Agreed_Resolution_Date__c</fullName>
        <description>The Date of Resolution that has the been agreed (outside of SLA)</description>
        <inlineHelpText>The Date of Resolution that has the been agreed (outside of SLA)</inlineHelpText>
        <label>Agreed Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMP_Agreed_Resolution_Reminder_Date__c</fullName>
        <description>The date of the reminder  of the resolution date that has the been agreed (outside of SLA)</description>
        <inlineHelpText>The date of the reminder  of the resolution date that has the been agreed (outside of SLA)</inlineHelpText>
        <label>Agreed Resolution Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMP_Complaint_Stage__c</fullName>
        <description>The current stage of the complaint</description>
        <inlineHelpText>The current stage of the complaint</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Stage 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leader &amp; Deputy Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Manual_Resolution_Date_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if a Manual Resolution Date has been agreed</description>
        <inlineHelpText>Checked if a Manual Resolution Date has been agreed</inlineHelpText>
        <label>Manual Resolution Date Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMP_Notes_for_Extension__c</fullName>
        <description>Additional notes for the extension of resolution date</description>
        <inlineHelpText>Additional notes for the extension of resolution date</inlineHelpText>
        <label>Notes for Extension</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMP_Original_Complaint_as_Submitted__c</fullName>
        <description>If the complaint was submitted electronically (either a word doc or email) then the full complaint can be pasted into this field</description>
        <inlineHelpText>If the complaint was submitted electronically (either a word doc or email) then the full complaint can be pasted into this field</inlineHelpText>
        <label>Original Complaint as Submitted</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMP_Other_Reason_for_Extension__c</fullName>
        <description>Other reasons for the extension of resolution date</description>
        <inlineHelpText>Other reasons for the extension of resolution date</inlineHelpText>
        <label>Other Reason for Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMP_Outcome_Required__c</fullName>
        <description>What is the required Outcome of this ticket?</description>
        <inlineHelpText>What is the required Outcome of this ticket?</inlineHelpText>
        <label>Outcome Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMP_Reason_for_Complaint__c</fullName>
        <description>The customers reason for the complaint or enquiry</description>
        <inlineHelpText>The customers reason for the complaint or enquiry</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Failure to follow own Policy, Rules, Procedures or the law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not take all the relevant information into account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services being delivered at a lower standard than is set out in our policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave the wrong information or did not advise of right of appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The attitude of staff delivering services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not satisfied with response?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neglect or delay in responding to customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malice, bias or unfair discrimination.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objecting against the actual agreed policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohesion,Investment,Safety,Etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract/Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff and Communication Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s Social Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay/Waiting Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Reason_for_Extension__c</fullName>
        <description>The reason for extending the resolution date</description>
        <inlineHelpText>The reason for extending the resolution date</inlineHelpText>
        <label>Reason for Extension</label>
        <picklist>
            <picklistValues>
                <fullName>Complex case requiring more time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New time agreed with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Secondary_Reason__c</fullName>
        <description>Further detail regarding the customers reason for the complaint / enquiry</description>
        <inlineHelpText>Further detail regarding the customers reason for the complaint / enquiry</inlineHelpText>
        <label>Secondary Reason</label>
        <picklist>
            <controllingField>CMP_Reason_for_Complaint__c</controllingField>
            <picklistValues>
                <fullName>In Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child protection conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact not returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disagree with Social Worker decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to explain changed care plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor relationship with Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor standard foster care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhelpful attitude of staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff attitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Outcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay In Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay In OT Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Availability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Source_of_Complaint__c</fullName>
        <description>Who has made the compliant</description>
        <inlineHelpText>Who has made the compliant</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Councillor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMP_Summary__c</fullName>
        <description>Summary of Complaint\Concern\Enquiry</description>
        <inlineHelpText>Summary of Complaint\Concern\Enquiry</inlineHelpText>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMP_Target_of_complaint__c</fullName>
        <defaultValue>&quot;No Target Record Set Yet&quot;</defaultValue>
        <description>The target of the complaint. This is specified by adding a target record to the compliant record</description>
        <inlineHelpText>The target of the complaint. This is specified by adding a target record to the compliant record</inlineHelpText>
        <label>Target</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EIR_Exception__c</fullName>
        <inlineHelpText>Reason for an EIR having exception. See knowledge article for reasons explanations.</inlineHelpText>
        <label>EIR Exception</label>
        <picklist>
            <controllingField>GLOBAL_Closing_Code__c</controllingField>
            <picklistValues>
                <fullName>Regulation 12(4)(a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(4)(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(4)(c)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(4)(d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(4)(e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(c)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(d)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(e)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(f)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(5)(g)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 12(9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation 13</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ENQ_ICT_Activity__c</fullName>
        <description>The ICT Activity associated with this ticket</description>
        <inlineHelpText>The ICT Activity associated with this ticket (Controlled by ICT Service Area)</inlineHelpText>
        <label>ICT Activity</label>
        <picklist>
            <controllingField>ENQ_ICT_Service_Area__c</controllingField>
            <picklistValues>
                <fullName>Removal of Outlook PST file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice guidance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agresso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEBPAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eform help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FW: 2013 Webmail Verification Quota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KVS buttons missing from Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slowness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change name on phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENQ_ICT_Service_Area__c</fullName>
        <description>The Service Area associated with this ticket</description>
        <inlineHelpText>The Service Area associated with this ticket (Controlled by Type)</inlineHelpText>
        <label>ICT Service Area</label>
        <picklist>
            <controllingField>GLOBAL_Type__c</controllingField>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work from home?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access someone else’s emails?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request setting up network share-drive with specific permissions?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispose of “old” hardware?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer RSA tokens?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request work request/project work?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlock laptop/pc?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request account modification?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup out of office setup in Outlook for member of my team?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book the IT training room?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get access to a scan share?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report lost mobile phone/lost laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save a file?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do mail merge?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get an e-from designed?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map a drive?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup and configure mailbox?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add another mailbox?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Map printers?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update/install print driver?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive emails?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change network password from home?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have a copy of software installed on my PC/laptop?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restore/retrieve deleted network files?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a  mobile device in the managed solution?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a mobile device on an un-managed wifi solution?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an app to a mobile device through an app store?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENQ_Impact_Level__c</fullName>
        <description>The impact level of the ICT Enquiry or incident</description>
        <inlineHelpText>The impact level of the ICT Enquiry or incident</inlineHelpText>
        <label>Impact Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENQ_Impact__c</fullName>
        <description>Number and/or Type of user impacted</description>
        <inlineHelpText>Number and/or Type of user impacted</inlineHelpText>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1 - All Users / Whole Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Team / Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Single User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENQ_Original_Owner__c</fullName>
        <description>The original owner of the ticket, this is the first user that the ticket has been assigned to after creation by the 1st line agent.</description>
        <inlineHelpText>The original owner of the ticket, this is the first user that the ticket has been assigned to after creation by the 1st line agent. (Role in brackets)</inlineHelpText>
        <label>Originally Assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENQ_Priority_Definition__c</fullName>
        <formula>&quot;pfft!&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENQ_Priority__c</fullName>
        <description>Priority should be based on the Impact and Severity</description>
        <inlineHelpText>Priority should be based on the Impact and Severity</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1 (Critical)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2 (High)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3 (Medium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4 (Low)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENQ_Severity__c</fullName>
        <description>This defines the urgency of the incident/enquiry</description>
        <inlineHelpText>This defines the urgency of the incident/enquiry</inlineHelpText>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>A - Council Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Council Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Development / Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIN_Authorisation_Level__c</fullName>
        <description>Level required to authorise the specified value of adjustment</description>
        <inlineHelpText>Level required to authorise the specified value of adjustment</inlineHelpText>
        <label>Authorisation Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low:  £0 - £5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium:  £5,001 - £30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High:  £30,001 - £60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited:  &gt;£60,001</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FIN_Authorised_Date__c</fullName>
        <description>Date this adjustment was authorised</description>
        <inlineHelpText>Date this adjustment was authorised</inlineHelpText>
        <label>Authorised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIN_Authorised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this adjustment has been authorised</description>
        <inlineHelpText>Checked if this adjustment has been authorised</inlineHelpText>
        <label>Authorised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIN_Finance_Service_Description__c</fullName>
        <description>A description of the Finance Service being requested</description>
        <inlineHelpText>A description of the Finance Service being requested</inlineHelpText>
        <label>Finance Service Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FIN_Narrative__c</fullName>
        <description>Detailed information about the adjustment/finance service that is not captured in any other fields</description>
        <inlineHelpText>Detailed information about the adjustment/finance service that is not captured in any other fields</inlineHelpText>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FIN_Short_Description__c</fullName>
        <description>A short description of the finance requirement (used on chatter action)</description>
        <inlineHelpText>A short description of the finance requirement (used on chatter action)</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FOI_Date__c</fullName>
        <inlineHelpText>Which date was the information produced on? If you don&apos;t know the exact date, an approximate one will do.</inlineHelpText>
        <label>FOI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOI_EIR_Request__c</fullName>
        <inlineHelpText>What information is the customer requesting?
Please also select a directorate, department and team as a target for the FOI/EIR.</inlineHelpText>
        <label>Request Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FOI_Effort_Estimate_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of hours estimate for effort required.</inlineHelpText>
        <label>Effort Estimate (hours)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>